==> zzzemb/Dual-FOC-Self-Balancing-Car/software/keil/bsp/oled/OLED.c <==
#include "main.h"
#include "OLED.h"
#include <string.h>
#include <math.h>
#include <stdio.h>
#include <stdarg.h>
#define OLED_USE_SW_I2C
#define OLED_SCL            GPIO_PIN_13
#define OLED_SDA            GPIO_PIN_14
#define OLED_SCL_GPIO_Port  GPIOC
#define OLED_SDA_GPIO_Port  GPIOC
#define OLED_I2C            hi2c1
#define OLED_ADDRESS 0x3C << 1
#define OLED_I2C_TIMEOUT 10
#define Delay_time 3

void OLED_W_SCL(uint8_t BitValue)
{
	
	HAL_GPIO_WritePin(OLED_SCL_GPIO_Port, OLED_SCL, (GPIO_PinState)BitValue);
    for (volatile uint16_t i = 0; i < Delay_time; i++){
       
    }
}

void OLED_W_SDA(uint8_t BitValue)
{

	HAL_GPIO_WritePin(OLED_SDA_GPIO_Port, OLED_SDA, (GPIO_PinState)BitValue);
	
	for (volatile uint16_t i = 0; i < Delay_time; i++){
       
    }
}

void OLED_GPIO_Init(void)
{
    uint32_t i, j;

    for (i = 0; i < 1000; i++) {
        for (j = 0; j < 1000; j++)
            ;
    }
#ifdef OLED_USE_SW_I2C
    __HAL_RCC_GPIOC_CLK_ENABLE();		
    __HAL_RCC_GPIOA_CLK_ENABLE();       
	GPIO_InitTypeDef GPIO_InitStruct = {0};            
 	GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_OD;	       
    GPIO_InitStruct.Pull = GPIO_PULLUP;                
	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;  
	GPIO_InitStruct.Pin = SW_I2C_SDA_Pin;                
 	HAL_GPIO_Init(GPIOC, &GPIO_InitStruct);

    GPIO_InitStruct.Pin = SW_I2C_SCL_Pin;
    HAL_GPIO_Init(GPIOC, &GPIO_InitStruct);

	OLED_W_SCL(1);
	OLED_W_SDA(1);
#endif
}

void OLED_WriteCommand(uint8_t Command)
{
#ifdef OLED_USE_SW_I2C
    OLED_I2C_Start();           
	OLED_I2C_SendByte(0x78);		
	OLED_I2C_SendByte(0x00);	
    OLED_I2C_SendByte(Command); 
    OLED_I2C_Stop();           
#elif defined(OLED_USE_HW_I2C)
    uint8_t TxData[2] = {0x00, Command};
    HAL_I2C_Master_Transmit(&OLED_I2C, OLED_ADDRESS, (uint8_t*)TxData, 2, OLED_I2C_TIMEOUT);
#endif 
}

void OLED_WriteData(uint8_t *Data, uint8_t Count)
{
    uint8_t i;
#ifdef OLED_USE_SW_I2C
    OLED_I2C_Start();       
	OLED_I2C_SendByte(0x78);		

    OLED_I2C_SendByte(0x40); 

    for (i = 0; i < Count; i++) {
        OLED_I2C_SendByte(Data[i]);
    }
    OLED_I2C_Stop();
#elif defined(OLED_USE_HW_I2C)
    uint8_t TxData[Count + 1]; 
    TxData[0] = 0x40; 
    for (i = 0; i < Count; i++) {
        TxData[i + 1] = Data[i];
    }
    HAL_I2C_Master_Transmit(&OLED_I2C, OLED_ADDRESS, (uint8_t*)TxData, Count + 1, OLED_I2C_TIMEOUT);
#endif    
}
